# Vs-code-extension

./: .gitignore  .lintstagedrc.cjs  .prettierignore  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json
.githooks/: pre-commit
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260410_120216_create_runs_plans_and_plan_actions_.py  20260410_124503_create_eval_runs_and_recipe_cache_tables.py
apps/api/app/: config.py  main.py  schemas.py
apps/api/app/db/: base.py  raw_connection.py
apps/api/app/dependencies/: planner.py
apps/api/app/models/: approval.py  eval_runs.py  execution.py  rollback_snapshot.py
apps/api/app/planner/: classifier.py  draft_schemas.py  persistence.py  policy.py  prompts.py  result.py  service.py  validation.py
apps/api/app/planner/providers/: base.py  factory.py  google_agentic.py  mock.py  types.py
apps/api/app/planner/schemas/: __init__.py  contracts.py
apps/api/app/routes/: health.py  plan.py  version.py  workspace_snapshot.py
apps/api/app/services/: workspace_snapshot_acceptance.py
apps/api/tests/: test_contract_parity.py  test_contracts_validation.py  test_db_proof_of_life.py  test_health.py  test_health_db.py  test_plan.py  test_plan_response_discriminator.py  test_plan_route_orchestration.py  test_plan_route_validation.py  test_planner_policy.py  test_planner_prompts.py  test_planner_service.py  test_planner_validation.py  test_request_classifier.py  test_version.py  test_workspace_snapshot_acceptance.py
docs/: architecture.md  (+6 more)
(+150 files in other folders)
