[project]
name = "vscode-control-agent-api"
version = "0.1.0"
description = "Backend API for VS Code Control Agent"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "ruff>=0.9.0",
  "python-dotenv>=1.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uvicorn]
factory = false

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"